--- a/How_do_you_like_them_apples_(Model_Training).ipynb
+++ b/How_do_you_like_them_apples_(Model_Training).ipynb
@@ -546,6 +546,16 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "csHsRI4DgxrS",
+        "colab_type": "text"
+      },
+      "source": [
+        "Training Language Model"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
         "id": "ayVY3FZXP-M3",
@@ -980,6 +990,16 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "hY1KuBMlg2sE",
+        "colab_type": "text"
+      },
+      "source": [
+        "Training Classifier"
+      ]
     },
     {
       "cell_type": "code",
@@ -1445,6 +1465,29 @@
       ],
       "execution_count": 0,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "GWn2JSJhS-8m",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        "learn.export('trained_model.pkl')"
+      ],
+      "execution_count": 0,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "rzOz-jN8gfXU",
+        "colab_type": "text"
+      },
+      "source": [
+        "Checking Model Performance"
+      ]
     },
     {
       "cell_type": "code",
